# persona

./: .gitignore  Cargo.toml  index.html  input.css  main.css  output-8c104a750d4c06b6.css  package.json  persona-2d599f36def63d09.js  persona-2d599f36def63d09_bg.wasm  persona-305c6caa27526903.js  persona-305c6caa27526903_bg.wasm  persona-44f4f1f9de5a832e.js  persona-44f4f1f9de5a832e_bg.wasm  persona-57069feac76cb7e.js  persona-57069feac76cb7e_bg.wasm  persona-6fd98e99bd98a89f.js  persona-6fd98e99bd98a89f_bg.wasm  persona-784259f24088dc36.js  persona-784259f24088dc36_bg.wasm  persona-78618a0d92ace786.js  persona-78618a0d92ace786_bg.wasm  persona-79c735e5418f0add.js  persona-79c735e5418f0add_bg.wasm  persona-9441b23008b3815f.js  persona-9441b23008b3815f_bg.wasm  persona-955bafc12dfa9385.js  persona-955bafc12dfa9385_bg.wasm  persona-a1b124e2d9e97238.js  persona-a1b124e2d9e97238_bg.wasm  persona-a9b8e5837f6109fc.js  persona-a9b8e5837f6109fc_bg.wasm  persona-d1f7601123faead6.js  persona-d1f7601123faead6_bg.wasm  persona-d489b30affc3ff45.js  persona-d489b30affc3ff45_bg.wasm  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: publish.yml
assets/: index-047483f4.css  index-0d7ea6df.css  index-3f218269.js  index-44f09040.css  index-5a41c124.css  index-9c96ee10.css  index-a077efa2.css  index-cdda0191.js  index-dbc8a8a6.js
src/: App.css  App.tsx  app.css  app.rs  browser.rs  components.rs  main.rs  main.tsx
src/app/: components.rs
src/components/: avatar.rs  badge.rs  button.rs  icons.rs
src/constants/: colors.css  fonts.css
(+2 files in other folders)
