[package]
name = "persona"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.5.2", features = ["csr"] }
web-sys = { version = "0.3.64", features = ["Window"] }
